hphp/hack/test/typecheck/require_once_strict.php.exp
File "require_once_strict.php", line 2, characters 1-30:
Toplevel statements are not allowed in strict files (Parsing[1002])
